# deepcor-fmri-toolbox

./: .gitignore  02-test-advanced-pipeline.ipynb  CLAUDE.md  DeepCor_models.py  README.md  cvae_dashboard_v1.py  cvae_v1.py  fmriprep_bids_parser.py  pyproject.toml  quickdocs.md  requirements.txt  setup.py
.ipynb_checkpoints/: 01-test-simple-pipeline-checkpoint.ipynb  02-test-advanced-pipeline-checkpoint.ipynb  LICENSE-checkpoint  notes-checkpoint.md  requirements-checkpoint.txt  setup-checkpoint.py
Archive/: DeepCor_utils.py
deepcor/: __init__.py  config.py  pipeline.py
deepcor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: 01-quickstart_mo.py  01_quickstart_highlevel.py  02-Advanced-Usage.ipynb  02_StudyForrest_mo.py  02_lowlevel_api.py  03-StudyForrest.ipynb  03_batch_run_subject.py  03_slurm_batch_job.sh  04-StudyForrest-sub-01-DeepCor-CVAE-v1.ipynb  README.md  advanced_usage.py  quick_test_01_mo.py
tests/: 01-StudyForrest-simple-train-v1.ipynb  01-StudyForrest-simple-train-v2.ipynb  01_StudyForrest-simple-v1.ipynb  01_StudyForrest-simple-v1_mo.py  01_StudyForrest-simple-v2.ipynb  01_StudyForrest-simple-v2_mo.py  02-StudyForrest-advanced-train-v1.ipynb  02_ABCD-advanced-v2_mo.py  02_StudyForrest-advanced-v1.ipynb  02_StudyForrest-advanced-v1.py  02_StudyForrest-advanced-v1_mo.py  02_StudyForrest-advanced-v2.ipynb  02_StudyForrest-advanced-v2.py  02_StudyForrest-advanced-v2_mo.py  05-group_analysis_forrest_mo.py  05-group_analysis_forrest_mp.py  06-dev_mo.py  fix_notebook.py  slurm-01-01-deepcor-forrest-CVAE-V1-simple-jupyter.sh  slurm-01-02-deepcor-forrest-CVAE-V2-simple-jupyter.sh  slurm-01-03-deepcor-forrest-CVAE-V1-advanced-jupyter.sh  slurm-01-04-deepcor-forrest-CVAE-V2-advanced-jupyter.sh  slurm-01-deepcor-forrest-CVAE-V2-jupyter.sh  slurm-01-deepcor-forrest-CVAE-V2-marimo.sh  slurm-01.sh  studyforrest-S_0_R4.html  studyforrest-S_1_R4.html
wiki/: CVAEs.md  README.md  backwards_compatibility.md  batch_jobs.md  configuration.md  glossary.md  (+6 more)
(+70 files in other folders)
