[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcor"
version = "0.1.0"
description = "Deep Learning-based Denoising for fMRI"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "DeepCor Development Team"}
]
keywords = ["fmri", "neuroimaging", "denoising", "deep-learning", "pytorch", "vae"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.1.0",
    "matplotlib>=3.3.0",
    "torch>=1.9.0",
    "antspyx>=0.3.0",
    "nilearn>=0.8.0",
    "scikit-learn>=0.24.0",
    "tqdm>=4.60.0",
    "ipython>=7.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "sphinx>=4.0",
]

[project.urls]
Homepage = "https://github.com/Aglinskas/deepcor-fmri-toolbox"
Documentation = "https://deepcor.readthedocs.io"
Repository = "https://github.com/Aglinskas/deepcor-fmri-toolbox"
"Bug Tracker" = "https://github.com/Aglinskas/deepcor-fmri-toolbox/issues"

# Only ship the `deepcor` package; `wiki/`, `tests/`, `examples/` are not
# installable packages, so restrict automatic discovery to deepcor.*
[tool.setuptools.packages.find]
include = ["deepcor*"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
